fix(top-bar): history buttons gap

--- a/theme/src/main/topbar/topbar.scss
+++ b/theme/src/main/topbar/topbar.scss
@@ -24,9 +24,6 @@
 }
 
 // top bar buttons
-.main-topBar-historyButtons {
-    gap: 15px;
-}
 .main-topBar-button,
 .main-topBar-button:hover,
 .main-topBar-historyButtons .main-topBar-button {
